--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="120dp"
         android:ems="10"
+        android:textColor="@color/white"
         android:inputType="textPersonName"
         android:hint="Exercise"
         android:textColorHint="@color/white"
@@ -29,6 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
+        android:textColor="@color/white"
         android:inputType="number"
         android:hint="Sets"
         android:textColorHint="@color/white"
@@ -44,6 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
+        android:textColor="@color/white"
         android:inputType="number"
         android:hint="Reps"
         android:textColorHint="@color/white"
