--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -6,7 +6,15 @@
     android:background="@drawable/account_background_selector"
     android:orientation="vertical">
 
-    <RelativeLayout
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="290dp"
         android:gravity="center"
@@ -40,7 +48,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:gravity="center"
-                    android:text="Ditlev Andersen"
+                    android:text="@string/user_name"
                     android:textColor="@color/black"
                     android:textSize="25sp"
                     android:textStyle="bold" />
@@ -51,7 +59,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="5dp"
                     android:gravity="center"
-                    android:text="Username"
+                    android:text="@string/member_id"
                     android:textColor="@color/black"
                     android:textSize="25sp" />
 
@@ -73,7 +81,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Contact information"
+            android:text="@string/contact_information"
             android:textColor="@color/black"
             android:textSize="25sp"
             android:textStyle="bold" />
@@ -89,7 +97,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=" E-mail: diand19@student.sdu.dk"
+                android:text="@string/email"
                 android:textColor="@color/black"
                 android:textSize="25sp" />
         </androidx.cardview.widget.CardView>
@@ -105,7 +113,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=" Tlf: 12345678"
+                android:text="@string/telephone_number"
                 android:textColor="@color/black"
                 android:textSize="25sp" />
         </androidx.cardview.widget.CardView>
@@ -117,13 +125,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
         android:background="@color/cardview_light_background"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginBottom="20dp">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Contact information"
+            android:text="@string/membership"
             android:textColor="@color/black"
             android:textSize="25sp"
             android:textStyle="bold" />
@@ -139,7 +148,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=" E-mail: diand19@student.sdu.dk"
+                android:text="@string/membership_type"
                 android:textColor="@color/black"
                 android:textSize="25sp" />
         </androidx.cardview.widget.CardView>
@@ -155,14 +164,14 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=" Tlf: 12345678"
+                android:text="@string/membership_status"
                 android:textColor="@color/black"
                 android:textSize="25sp" />
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
-
-
+    </LinearLayout>
+    </ScrollView>
 
 
 </LinearLayout>
