--- a/app/src/main/res/menu/delete_button.xml
+++ b/app/src/main/res/menu/delete_button.xml
@@ -2,8 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-        <!--item android:id="@+id/menu_delete"
+    <item android:id="@+id/button_delete"
         android:title="Delete"
+        android:icon="@drawable/ic_delete"
         android:iconTint="@color/white"
-        app:showAsAction="ifRoom"/-->
+        app:showAsAction="ifRoom"/>
 </menu>
